--- a/templates/all_users.html
+++ b/templates/all_users.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{% extends "template.html" %}
+{% block content %}
     {% for user in users %}
     <h2>User {{ user.id }}, age {{ user.age }} has {{ user.ratings|length }} ratings</h2>
     {% endfor %}
-</body>
-</html>
+{% endblock %}
