--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,7 @@
 {% extends "template.html" %}
+{% block style %}
+    <title>Sign Up</title>
+{% endblock %}
 {% block content %}
 <form class="form-signin" method="POST">
     <h2 class="form-signin-heading">Please Sign Up</h2>
