--- a/templates/all_users.html
+++ b/templates/all_users.html
@@ -1,6 +1,10 @@
 {% extends "template.html" %}
+{% block style %}
+    <title>All Users</title>
+{% endblock %}
 {% block content %}
+    <h1>All Users</h1>
     {% for user in users %}
-    <h2>User {{ user.id }}, age {{ user.age }} has {{ user.ratings|length }} ratings</h2>
+    <h4>User <a href="/user_profile?email={{ user.email }}">{{ user.email }}</a> has {{ user.ratings|length }} ratings.</h4>
     {% endfor %}
 {% endblock %}
