--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,7 @@
 {% extends "template.html" %}
+{% block style %}
+    <title>Log In</title>
+{% endblock %}
 {% block content %}
 <form class="form-signin" method="POST">
     <h2 class="form-signin-heading">Please Sign In</h2>
