--- a/templates/template.html
+++ b/templates/template.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
     {% block style %}{% endblock %}
@@ -27,8 +26,12 @@
                     <li><a href="/all_movies">All Movies</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/login">Login</a></li>
+                    {% if session.get('user') %}
+                    <li><a href="/login" id="login">Log Out</a></li>
+                    {%else%}
+                    <li><a href="/login" id="login">Log In</a></li>
                     <li><a href="/signup">Signup</a></li>
+                    {%endif%}
                 </ul>
             </div>
         </div>
@@ -48,5 +51,7 @@
     </div>
     {% block content %}{% endblock %}
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 </body>
 </html>
