--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -1,4 +1,8 @@
 {% extends "template.html" %}
+{% block style %}
+    <title>{{ user.email }}'s Profile</title>
+{% endblock %}
 {% block content %}
-
+    <h1>{{ heading }}</h1>
+    <h4>User {{ user.email }} has {{ user.ratings|length }} ratings.</h4>
 {% endblock %}
