--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,4 +1,7 @@
 {% extends "template.html" %}
+{% block style %}
+    <title>Welcome</title>
+{% endblock %}
 {% block content %}
     <h2>Welcome!</h2>
 {% endblock %}
