--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
     <title>Log In</title>
 {% endblock %}
 {% block content %}
-<form class="form-signin" method="POST">
+<form action="/login" class="form-signin" method="POST">
     <h2 class="form-signin-heading">Please Sign In</h2>
     <input type="email" name="email" class="form-control" placeholder="Email Address" required autofocus />
     <input type="password" name="password" class="form-control" placeholder="Password" required />
