--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,7 +3,7 @@
     <title>Sign Up</title>
 {% endblock %}
 {% block content %}
-<form class="form-signin" method="POST">
+<form action="/signup" class="form-signin" method="POST">
     <h2 class="form-signin-heading">Please Sign Up</h2>
     <input type="email" name="email" class="form-control" placeholder="Email Address" required autofocus />
     <input type="password" name="password" class="form-control" placeholder="Password" required />
